<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back"
                android:tint="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/buttonBack"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed-medium"
                android:maxLines="1"
                android:text="@string/settings"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDayNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:rippleColor="@color/colorAppRipple"
                app:strokeColor="@color/colorAppRipple"
                app:strokeWidth="0.5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/checkboxDayNight"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center|start"
                            android:text="@string/day_night"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center|start"
                            android:text="@string/day_night_desc"
                            android:textColor="@color/colorGrey"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkboxDayNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="-8dp"
                        android:background="@color/colorTransparent"
                        android:button="@null"
                        android:checked="false"
                        android:clickable="false"
                        android:drawableStart="@drawable/ic_checkbox" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:rippleColor="@color/colorTransparent"
                app:strokeColor="@color/colorAppRipple"
                app:strokeWidth="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardShowPageInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:rippleColor="@color/colorAppRipple">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toStartOf="@id/checkboxShowPageInfo"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center|start"
                                    android:text="@string/show_page_info"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center|start"
                                    android:text="@string/show_page_info_desc"
                                    android:textColor="@color/colorGrey"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/checkboxShowPageInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="-8dp"
                                android:background="@color/colorTransparent"
                                android:button="@null"
                                android:checked="false"
                                android:clickable="false"
                                android:drawableStart="@drawable/ic_checkbox" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@drawable/bg_divider"
                        android:backgroundTint="@color/colorApp" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardVolumeKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:rippleColor="@color/colorAppRipple">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toStartOf="@id/checkboxVolumeKey"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center|start"
                                    android:text="@string/volume_key"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center|start"
                                    android:text="@string/volume_key_desc"
                                    android:textColor="@color/colorGrey"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/checkboxVolumeKey"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="-8dp"
                                android:background="@color/colorTransparent"
                                android:button="@null"
                                android:checked="false"
                                android:clickable="false"
                                android:drawableStart="@drawable/ic_checkbox" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/viewShadow"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/appBarLayout"
        android:background="@drawable/bg_shadow_bottom"
        android:visibility="gone" />

</RelativeLayout>