<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorWhite"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/layoutSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="72dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/image_content"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/colorApp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/settings"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:tint="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="72dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/image_content"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:tint="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="72dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/image_content"
                    android:src="@drawable/ic_share"
                    app:tint="@color/colorApp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/share"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:tint="@color/colorBlack" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>